2008-09-25  Tomas Cerha  <cerha@brailcom.org>

	* pytis/data/types_.py: 
	* pytis/form/inputfield.py: 
	Respect codebook sorting in `ListField'.

2008-09-24  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/field.py (PresentedRow.enumerate): Fixed
	runtime filter invocation.

	* pytis/web/form.py:
	Added support for active filter selection.
	Added experimental support for search string queries. 

2008-09-22  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: 
	Added support for `ListView' found record highlighting.

	* pytis/data/data.py:
	* pytis/form/application.py:
	* pytis/form/commands_.py:
	* pytis/form/form.py:
	* pytis/form/list.py:
	* pytis/form/search.py:
	* pytis/form/screen.py:
	Added (experimental) support for toolbar filter menu.

2008-09-16  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py:
	The `form-name' argument renamed to `form_name'.  Respect
	`form_name' also for the `search' argument.

	* pytis/presentation/spec.py: 
	* pytis/form/form.py:
	Added support for condition identifiers and default filter
	specification.

2008-09-10  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: 
	Fixed invalid concatenation of translatable texts.
	
	* pytis/data/types_.py: 
	* pytis/web/field.py: 
	* pytis/web/form.py: 
	Automatically format structured text fields in web forms.

2008-09-09  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/inputfield.py (InputField.insert_text): New method.

	* pytis/form/form.py: Allow access to form fields through a public
	method `field()'.

2008-09-04  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py:
	All references to `exporter' replaced by `context' (according to
	LCG).
	
	* pytis/web/form.py:
	Only export the information about the asterix sign, if the sign
	was used in the form.

	* pytis/presentation/spec.py: 
	* pytis/web/form.py:
	Added support for automatic ListView row indexes.

	* pytis/util/util.py:
	(argument_names): Handle functions with no arguments correctly.
	